# stm32_rust_examples

./: README.md
HelloWorld/: Cargo.toml  memory.x
HelloWorld/.cargo/: config.toml
HelloWorld/openocd/: flash.sh
HelloWorld/src/: main.rs
hello-world-text/: Cargo.toml  cmds.txt
serial_hal/: Cargo.toml  Embed.toml
serial_hal/.cargo/: config.toml
serial_hal/src/: main.rs
spi_master/: Cargo.toml
spi_master/src/: main.rs
