[package]
authors = ["Derzhavin <derzhavind@bk.ru>"]
edition = "2018"
readme = "README.md"
name = "HelloWorld"
version = "0.1.0"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"

[dependencies.stm32f4]
features = ["stm32f446", "rt"]
git = "https://github.com/stm32-rs/stm32-rs-nightlies"

# this lets you use `cargo fix`!
[[bin]]
name = "HelloWorld"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
